--- a/style.css
+++ b/style.css
@@ -1,35 +1,386 @@
-.btn.dropdown-toggle  {
-    width:150px;
-    text-align:left;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap');
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-span.caret {
-    position: absolute;
-    left: 90%;
-    top: 45%;
+html {
+	font-size: 62.5%;
 }
 
-label {
-    padding-top:5px;
+body {
+	font-family: 'Rubik';
+	background-color: #121212;
+	color: white;
 }
 
-.form-label {
-    padding-left:0px !important;
+.container {
+	display: grid;
+	grid-template-columns: 30rem 1fr;
+	grid-template-rows: min-content 1fr min-content;
+	margin-bottom: 8rem;
 }
 
-img {
-    width:140px;
-    height:140px;
+/* ********************************** */
+/*               TOPBAR               */
+/* ********************************** */
+.topbar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem 2rem;
+	background-color: #101010;
+	position: fixed;
+	z-index: 30;
+	top: 0;
+	right: 0;
+	width: calc(100% - 30rem);
 }
 
-.btn-success {
-    background-color: #3b7d4a!important;
+.topbar a{
+	text-decoration: none;
+	font-size: 1.6rem;
+	color: #ffffff;
+	display: flex;
+	align-items: center;
+	gap: 2rem;
+	font-weight: 600;
+	transition: all 0.3s ease;
 }
 
-.btn-success:hover {
-    background-color: #4daf64!important;
+/* ********************************** */
+/*               SIDEBAR              */
+/* ********************************** */
+.navbar {
+    background-color: #000;
+    color: #b3b3b3;
+    padding-top: 2.4rem;
+    position: fixed;
+    width: 30rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
 }
 
-img.track {
-    border: 1px solid #8a8a8a;
+
+/* ********************************** */
+/*             MAIN CONTENT           */
+/* ********************************** */
+
+.main-content {
+	grid-row: 1/3;
+	grid-column: 2/-1;
+	padding: 2.5rem;
+	display: flex;
+	flex-direction: column;
+	gap: 3rem;
+}
+
+.title-playlist {
+	font-size: 2.4rem;
+	color: #fff;
+	font-weight: 600;
+	padding-top: 5%;
+   
+    margin-bottom: 20px;
+}
+
+.title-playlist:hover {
+	text-decoration: underline;
+}
+
+/* ********************************** */
+/*               FOOTER               */
+/* ********************************** */
+.footer {
+	grid-row: 3/4;
+	grid-column: 2/-1;
+	background-color: #121212;
+	padding: 6rem 4rem;
+	display: flex;
+	flex-direction: column;
+	gap: 5rem;
+}
+.footer p {
+    font-size: 1.3rem;
+}
+
+.container-links-footer {
+	display: flex;
+	justify-content: space-between;
+	border-bottom: 1px solid #2a2a2a;
+	padding-bottom: 5rem;
+}
+
+.links-footer {
+	display: flex;
+	flex-direction: column;
+	gap: 1.5rem;
+	font-size: 1.6rem;
+}
+
+.links-footer a {
+	text-decoration: none;
+	color: #a7a7a7;
+}
+
+.links-footer a:hover {
+	text-decoration: underline;
+	color: #fff;
+}
+
+/* ********************************** */
+/*               SEARCH               */
+/* ********************************** */
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding: 2rem;
+    background-color: #181818;
+    border-radius: 0.5rem;
+    margin-bottom: 2rem;
+}
+
+.search-container input {
+    width: 100%;
+    padding: 1rem;
+    font-size: 1.6rem;
+    border: 1px solid #282828;
+    border-radius: 5px;
+    background-color: #282828;
+    color: white;
+    outline: none;
+}
+
+.search-container button {
+    padding: 1rem 2rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+    border: none;
+    background-color: #1ed760;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.search-container button:hover {
+    background-color: #1db954;
+}
+
+/* ********************************** */
+/*           RESULTS ARTIST           */
+/* ********************************** */
+.results-container {
+    padding: 2rem;
+    background-color: #181818;
+    border-radius: 0.5rem;
+}
+
+.artist-img {
+    width: 30%;
+}
+
+.result{
+    display:flex ;
+    flex-direction: row;
+}
+
+.buttons{
+    margin: auto ;
+    display:flex ;
+    flex-direction: column;
+    gap:30px;
+
+}
+
+#result-button {
+    width: 200px;
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 20px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+
+.album-img{
+    width: 100%;
+}
+
+/* ********************************** */
+/*           MUSIC GENRES       */
+/* ********************************** */
+
+.container-cardGender-concentracion {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+    gap: 1.5rem;
+    padding: 2rem 0;
+    max-height: 18rem;
+    overflow: hidden;
+    transition: max-height 0.5s ease-in-out;
+}
+
+.container-cardGender-concentracion.expanded {
+    max-height: none;
+}
+
+.cardGender-concentracion {
+    background-color: #181818;
+    border-radius: 0.8rem;
+    padding: 1rem;
+    transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    cursor: pointer;
+    position: relative;
+}
+
+.cardGender-concentracion:hover {
+    background-color: #282828;
+    transform: scale(1.05);
+}
+
+.cardGender-img img {
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.8rem;
+}
+
+.cardGender h2 {
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 90%;
+    cursor: pointer;
+}
+
+#toggleGenres {
+    display: block;
+    margin: 1.5rem auto;
+    padding: 0.8rem 1.5rem;
+    font-size: 1.4rem;
+    font-weight: bold;
+    background-color: #1db954;
+    color: white;
+    border: none;
+    border-radius: 2rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+#toggleGenres:hover {
+    background-color: #1ed760;
+    transform: scale(1.05);
+}
+
+/* ********************************** */
+/*              SONGS                 */
+/* ********************************** */
+.container-card-concentracion {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+    gap: 2.4rem;
+    justify-content: center; 
+}
+
+.song-card, .album-card {
+    background-color: #181818;
+    border-radius: 0.5rem;
+    padding: 1.6rem;
+    box-shadow: 0 0 2rem rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+    position: relative;
+	margin-bottom: 1.5rem; 
+}
+
+.song-card:hover, .album-card:hover {
+    background-color: #282828;
+    transform: scale(1.03);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.song-card img, .album-card img {
+    width: 100%;
+    border-radius: 0.5rem;
+}
+
+.song-card h3, .album-card h3 {
+    font-size: 1.6rem;
+    color: #fff;
+    margin-top: 1rem;
+    font-weight: 600;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.song-card p, .album-card p {
+    font-size: 1.3rem;
+    color: #b3b3b3;
+}
+
+.song-card a, .album-card a {
+    display: block;
+    margin-top: 1rem;
+    text-decoration: none;
+    color: #1ed760;
+    font-size: 1.4rem;
+    font-weight: 600;
+}
+
+.song-card a:hover, .album-card a:hover{
+    text-decoration: underline;
+}
+
+.project-description{
+    padding:25px;
+    margin-bottom: -50%;
+    color: white;
+    font-size: 1.3rem
+
+}
+
+.container-logo{
+    padding: 20px;
+}
+
+.description{
+    max-width: 800px;
+    margin: 20px;
+    padding: 15px;
+    background-color: #1e1e1e;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.1);
+    margin-top: -40%;
+    color: white;
+    font-size: 1.2rem
+    
+}
+.description h2 {
+    margin-top: 20px;
+}
+
+
+
+.feature {
+    background-color: #282828;
+    padding: 15px;
+    margin: 10px 0;
+    border-radius: 8px;
+
+}
+
+.feature h3 {
+    color: #1DB954;
 }
